packages/typ/tests/fixtures/diagnostics/0189_adt_record_pattern_annotation_mismatch_06.ml
type rec_zeta = { age : int; ready : bool }
let { age = (zeta : bool); ready = other_zeta } =
  { age = 5; ready = false }
